--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,7 @@
       <li><a href="cancel">cancel</a></li>
       <li><a href="more">more</a></li>
       <li><a href="xsrf">xsrf</a></li>
+      <li><a href="progress">progress</a></li>
     </ul>
   </body>
 </html>
