--- a/examples/index.html
+++ b/examples/index.html
@@ -11,13 +11,14 @@
       <li><a href="simple">Simple</a></li>
       <li><a href="base">Base</a></li>
       <li><a href="error">Error</a></li>
-      <li><a href="extend">extend</a></li>
-      <li><a href="interceptor">interceptor</a></li>
-      <li><a href="config">config</a></li>
-      <li><a href="cancel">cancel</a></li>
-      <li><a href="more">more</a></li>
-      <li><a href="xsrf">xsrf</a></li>
-      <li><a href="progress">progress</a></li>
+      <li><a href="extend">Extend</a></li>
+      <li><a href="interceptor">Interceptor</a></li>
+      <li><a href="config">Config</a></li>
+      <li><a href="cancel">Cancel</a></li>
+      <li><a href="more">More</a></li>
+      <li><a href="xsrf">Xsrf</a></li>
+      <li><a href="progress">Progress</a></li>
+      <li><a href="auth">Auth</a></li>
     </ul>
   </body>
 </html>
