--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,7 @@
       <li><a href="xsrf">Xsrf</a></li>
       <li><a href="progress">Progress</a></li>
       <li><a href="auth">Auth</a></li>
+      <li><a href="status">Status</a></li>
     </ul>
   </body>
 </html>
