--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,7 @@
       <li><a href="progress">Progress</a></li>
       <li><a href="auth">Auth</a></li>
       <li><a href="status">Status</a></li>
+      <li><a href="serializer">Serializer</a></li>
     </ul>
   </body>
 </html>
