--- a/examples/index.html
+++ b/examples/index.html
@@ -21,6 +21,7 @@
       <li><a href="auth">Auth</a></li>
       <li><a href="status">Status</a></li>
       <li><a href="serializer">Serializer</a></li>
+      <li><a href="baseURL">BaseURL</a></li>
     </ul>
   </body>
 </html>
