--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
       <li><a href="status">Status</a></li>
       <li><a href="serializer">Serializer</a></li>
       <li><a href="baseURL">BaseURL</a></li>
+      <li><a href="other">Other</a></li>
     </ul>
   </body>
 </html>
